@@ -1463,6 +1463,11 @@ void InputStateWidgetPressed(
         }
         return;
     }
+    else if (gDropdownIsColour)
+    {
+        // This is ordinarily covered in InputWidgetOver but the dropdown with colours is a special case.
+        InputUpdateTooltip(w, widgetIndex, screenCoords);
+    }
 
     gDropdownHighlightedIndex = -1;
     WindowInvalidateByClass(WindowClass::Dropdown);
